--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gremlins-dispatcher",
-  "version": "0.4.3",
-  "main": "dist/index.js",
+  "version": "0.5.0",
+  "main": "index.js",
   "author": {
     "name": "Andreas Wehr"
   },
@@ -14,10 +14,13 @@
   "devDependencies": {
     "babelify": "^5.0.4",
     "browserify": "^9.0.3",
-    "gremlins": "^0.8.1",
+    "gremlins": "^0.9.0",
     "gulp": "^3.8.11",
     "gulp-connect": "^2.2.0",
     "gulp-rename": "^1.2.0",
     "through2": "^0.6.3"
+  },
+  "browserify": {
+    "transform": ["babelify"]
   }
 }
