--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gremlins-dispatcher",
-  "version": "0.6.1",
+  "version": "1.0.0-rc.1",
   "main": "index.js",
   "author": {
     "name": "Andreas Wehr"
@@ -12,15 +12,12 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "babelify": "^5.0.4",
-    "browserify": "^9.0.3",
-    "gremlins": "^0.9.0",
+    "babel-preset-es2015": "^6.5.0",
+    "browserify": "^13.0.0",
+    "gremlins": "^1.0.0",
     "gulp": "^3.8.11",
-    "gulp-connect": "^2.2.0",
-    "gulp-rename": "^1.2.0",
-    "through2": "^0.6.3"
-  },
-  "browserify": {
-    "transform": ["babelify"]
+    "gulp-babel": "^6.1.2",
+    "gulp-connect": "^3.0.0",
+    "through2": "^2.0.1"
   }
 }
