--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gremlins-dispatcher",
-  "version": "1.0.0-rc.1",
-  "main": "index.js",
+  "version": "1.0.0-rc.2",
+  "main": "lib/index.js",
   "author": {
     "name": "Andreas Wehr"
   },
