--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gremlins-dispatcher",
-  "version": "1.0.0-rc.2",
+  "version": "1.0.0",
   "main": "lib/index.js",
   "author": {
     "name": "Andreas Wehr"
