--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gremlins-dispatcher",
-  "version": "1.1.1",
+  "version": "2.0.0-rc1",
   "main": "lib/index.js",
   "author": {
     "name": "Andreas Wehr"
@@ -14,7 +14,7 @@
   "devDependencies": {
     "babel-preset-es2015": "^6.5.0",
     "browserify": "^13.0.0",
-    "gremlins": "^1.1.1",
+    "gremlins": "^2.0.0-beta1",
     "gulp": "^3.8.11",
     "gulp-babel": "^6.1.2",
     "gulp-connect": "^3.0.0",
